--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@astrojs/mdx": "^2.0.3",
     "@astrojs/rss": "^4.0.1",
     "@astrojs/sitemap": "^3.0.4",
+    "@astrojs/vercel": "^6.1.3",
+    "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^1.0.2",
     "astro": "^4.1.1"
   }
