--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@example/blog",
+  "name": "@harrikilpio/blog",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
     "dev": "astro dev",
@@ -17,6 +17,6 @@
     "@astrojs/vercel": "^6.1.4",
     "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^1.0.2",
-    "astro": "^4.1.2"
+    "astro": "^4.1.3"
   }
 }
