--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^3.0.1",
+    "@astrojs/mdx": "^3.1.0",
     "@astrojs/rss": "^4.0.6",
     "@astrojs/sitemap": "^3.1.5",
-    "@astrojs/vercel": "^7.6.0",
+    "@astrojs/vercel": "^7.7.0",
     "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^1.0.2",
-    "astro": "^4.9.2"
+    "astro": "^4.10.2",
+    "npm": "^10.8.1"
   }
 }
